feat: adding clean architecture concept
